Avoid subpath imports when main is used in esfx/equatable

--- a/packages/equatable/.npmignore
+++ b/packages/equatable/.npmignore
@@ -6,16 +6,17 @@
 /obj
 /scripts
 /src
+/lib/*.d.ts
 /lib/*.d.cts
 /lib/*.d.mts
 /api-extractor.json
 /package.internal.d.ts
 /jest*config.js
 /tsconfig*.json
-*.tsbuildinfo
 binding.gyp_
 .vscode
 .npmfiles
 *.tgz
+*.tsbuildinfo
 __tests__
 __perf__
