--- a/packages/equatable/.npmignore
+++ b/packages/equatable/.npmignore
@@ -1,14 +1,18 @@
 /build
-/dist/types/internal/*.d.ts
-/dist/types/internal/*.d.ts.map
+/dist/legacy/internal/hashers/murmur3.*
+/dist/cjs/internal/hashers/murmur3.*
+/dist/esm/internal/hashers/murmur3.*
+/dist/types/internal/**/*.d.ts
+/dist/types/internal/**/*.d.ts.map
 /dist/node
 /docsrc
 /obj
 /scripts
 /src
 /lib/*.d.ts
-/lib/*.d.cts
 /lib/*.d.mts
+/lib/*.wat
+/lib/perf
 /api-extractor.json
 /package.internal.d.ts
 /jest*config.js
