--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jest": "^29.0.3",
     "@types/node": "^17.0.23",
     "@types/node-fetch": "^2.5.10",
+    "@types/yargs": "16",
     "benchmark": "^2.1.4",
     "chalk": "^2.4.2",
     "commander": "^9.4.0",
@@ -68,6 +69,7 @@
     "ts-jest": "^29.0.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.6.1-rc",
+    "wasm-opt": "^1.3.0",
     "workspaces-foreach": "link:./scripts/workspaces-foreach",
     "yargs": "^16.2.0",
     "yargs-unparser": "^2.0.0"
