--- a/packages/equatable/package.json
+++ b/packages/equatable/package.json
@@ -4,7 +4,7 @@
     "description": "A low-level API for defining equality.",
     "type": "commonjs",
     "types": "./dist/types/index.d.ts",
-    "main": "./dist/node12/index.js",
+    "main": "./dist/legacy/index.js",
     "exports": {
         ".": {
             "types": "./dist/types/index.d.ts",
@@ -13,7 +13,17 @@
         }
     },
     "imports": {
-        "#hashCode": {
+        "#hash/native": {
+            "node": {
+                "require": "./lib/hashCodeNative.js",
+                "import": "./lib/hashCodeNative.mjs"
+            }
+        },
+        "#hash/number": {
+            "require": "./dist/cjs/internal/hashCode.js",
+            "import": "./dist/esm/internal/hashCode.mjs"
+        },
+        "#hash/bigint": {
             "node": {
                 "require": "./lib/hashCodeNative.js",
                 "import": "./lib/hashCodeNative.mjs"
@@ -21,22 +31,46 @@
             "require": "./dist/cjs/internal/hashCode.js",
             "import": "./dist/esm/internal/hashCode.mjs"
         },
-        "#hashCodeNative": {
+        "#hash/string": {
             "node": {
                 "require": "./lib/hashCodeNative.js",
                 "import": "./lib/hashCodeNative.mjs"
-            }
+            },
+            "require": "./dist/cjs/internal/hashCode.js",
+            "import": "./dist/esm/internal/hashCode.mjs"
+        },
+        "#hash/symbol": {
+            "node": {
+                "require": "./lib/hashCodeNative.js",
+                "import": "./lib/hashCodeNative.mjs"
+            },
+            "require": "./dist/cjs/internal/hashCode.js",
+            "import": "./dist/esm/internal/hashCode.mjs"
+        },
+        "#hash/object": {
+            "node": {
+                "require": "./lib/hashCodeNative.js",
+                "import": "./lib/hashCodeNative.mjs"
+            },
+            "require": "./dist/cjs/internal/hashCode.js",
+            "import": "./dist/esm/internal/hashCode.mjs"
         }
     },
     "author": "Ron Buckton (rbuckton@chronicles.org)",
     "license": "Apache-2.0",
     "scripts": {
         "prepack": "node ../../scripts/verifyPackage.js",
+
         "install": "node-pre-gyp install --fallback-to-build",
-        "prebuild": "node-pre-gyp configure build --runtime=node --target_arch=x64",
+
+        "build-native": "node-pre-gyp configure build --runtime=node --target_arch=x64",
+        "build-wasm": "node ./scripts/build-wasm.js -i src/internal/hashers/xxhash64.wast --mjs src/internal/hashers/xxhash64.generated.ts",
+        "prebuild": "yarn run build-native && yarn run build-wasm",
+
         "build-node-win32-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=win32",
         "build-node-linux-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=linux",
         "build-node-darwin-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=darwin",
+
         "package-node-win32-x64": "node-pre-gyp configure rebuild package --runtime=node --target_arch=x64 --target_platform=win32",
         "package-node-linux-x64": "node-pre-gyp configure rebuild package --runtime=node --target_arch=x64 --target_platform=linux",
         "package-node-darwin-x64": "node-pre-gyp configure rebuild package --runtime=node --target_arch=x64 --target_platform=darwin"
