Ensure docs are added to commit

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -68,12 +68,10 @@ jobs:
         CHANGED_FILES=$(git status --porcelain -- package.json lerna.json yarn.lock internal/*/package*.json packages/*/package*.json | cut -c 4-);
         CHANGED_FILES_JSON=$(CHANGED_FILES=$CHANGED_FILES node -e 'process.stdout.write(JSON.stringify(process.env.CHANGED_FILES.split(/\n/g).filter(Boolean)))')
         echo "changed_files=$CHANGED_FILES_JSON" >> $GITHUB_OUTPUT;
-        # echo "::set-output name=changed_files::$CHANGED_FILES_JSON";
 
         CHANGED_PACKAGES=$(git status --porcelain -- internal/*/package.json packages/*/package.json | cut -c 4-);
         CHANGED_PACKAGES_JSON=$(CHANGED_PACKAGES=$CHANGED_PACKAGES node -e 'process.stdout.write(JSON.stringify(process.env.CHANGED_PACKAGES.split(/\n/g).filter(Boolean).reduce((obj, path) => ({ ...obj, [path]: true }), {})))');
         echo "changed_packages=$CHANGED_PACKAGES_JSON" >> $GITHUB_OUTPUT;
-        # echo "::set-output name=changed_packages::$CHANGED_PACKAGES_JSON";
 
   native:
     strategy:
@@ -162,7 +160,6 @@ jobs:
         $env:CHANGED_DOCS=$(git status --porcelain -- docs | cut -c 4-);
         $env:CHANGED_DOCS_JSON=$(node -e 'process.stdout.write(JSON.stringify(process.env.CHANGED_DOCS.split(/\n/g).filter(Boolean)))')
         echo "changed_docs=$env:CHANGED_DOCS_JSON" >> $env:GITHUB_OUTPUT;
-        # echo "::set-output name=changed_docs::$env:CHANGED_DOCS_JSON";
     - name: upload docs artifacts
       uses: actions/upload-artifact@v3
       with:
@@ -235,6 +232,7 @@ jobs:
         git config user.name "GitHub Actions Bot"
         git config user.email "<>"
         git add -- ${{ join(fromJson(needs.version.outputs.changed_files), ' ') }}
+        git add -- ${{ join(fromJson(needs.docs.outputs.changed_docs), ' ') }}
         git commit -m "v${{ github.event.inputs.version }}"
         git tag -f "v${{ github.event.inputs.version }}" -m "v${{ github.event.inputs.version }}"
         git push --follow-tags --no-verify --atomic origin ${{ github.ref_name }}
