--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,8 @@ on:
         type: boolean
         default: true
 
+run-name: "publish v${{ inputs.version }} (${{ inputs.draft && 'draft' || 'release' }})"
+
 jobs:
   version:
     runs-on: ubuntu-latest
@@ -51,7 +53,7 @@ jobs:
     - name: yarn install
       run: yarn install --ignore-scripts --non-interactive
     - name: lerna version
-      run: lerna version ${{ github.event.inputs.version }} --no-git-tag-version --no-push --yes $([ ${{github.event.inputs.force_publish }} == true ] && echo "--force-publish")
+      run: lerna version ${{ inputs.version }} --no-git-tag-version --no-push --yes $([ ${{inputs.force_publish }} == true ] && echo "--force-publish")
     - name: upload version artifacts
       uses: actions/upload-artifact@v3
       with:
@@ -225,8 +227,8 @@ jobs:
         git config user.email "<>"
         git add -- ${{ join(fromJson(needs.version.outputs.changed_files), ' ') }}
         git add -- docs
-        git commit -m "v${{ github.event.inputs.version }}"
-        git tag -f "v${{ github.event.inputs.version }}" -m "v${{ github.event.inputs.version }}"
+        git commit -m "v${{ inputs.version }}"
+        git tag -f "v${{ inputs.version }}" -m "v${{ inputs.version }}"
         git push --follow-tags --no-verify --atomic origin ${{ github.ref_name }}
 
     - name: download native artifacts
@@ -244,15 +246,15 @@ jobs:
     - name: create release
       uses: ncipollo/release-action@v1
       with:
-        tag: "v${{ github.event.inputs.version }}"
+        tag: "v${{ inputs.version }}"
         commit: ${{ github.sha }}
-        draft: ${{ github.event.inputs.draft }}
-        prerelease: ${{ github.event.inputs.prerelease }}
+        draft: ${{ inputs.draft }}
+        prerelease: ${{ inputs.prerelease }}
         artifacts: ${{ join(fromJson(env.NATIVE_ARTIFACTS)) }}
         allowUpdates: true
     - name: publish
-      if: ${{ !github.event.inputs.draft }}
+      if: ${{ !inputs.draft }}
       run: |
-        lerna publish from-git --yes --no-verify-access --dist-tag ${{ github.event.inputs.dist_tag }}
+        lerna publish from-git --yes --no-verify-access --dist-tag ${{ inputs.dist_tag }}
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
