--- a/packages/async-iter-fn/.npmignore
+++ b/packages/async-iter-fn/.npmignore
@@ -1,12 +1,13 @@
+/dist/types/**/internal/*.d.ts
+/dist/types/**/internal/*.d.ts.map
+/docsrc
+/obj
+/src
+/api-extractor.json
+/tsconfig*.json
+/jest*.config.js
 .vscode
-__tests__
-obj
-docsrc
-src
-internal
-api-extractor.json
-tsconfig*.json
-*.tsbuildinfo
-jest*.config.js
 .npmfiles
+*.tsbuildinfo
 *.tgz
+__tests__
