Build electron binaries

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,23 +20,32 @@ jobs:
           target: ubuntu-latest
         - name: macos
           target: macos-latest
-        node:
-        - 16
-        - 18
-    name: "${{ matrix.os.name }} (node v${{ matrix.node }})"
+        runtime:
+        - label: node v16
+          runtime: node
+          node_version: 16
+        - label: node v18
+          runtime: node
+          node_version: 18
+        - label: electron
+          runtime: electron
+          node_version: 18
+    name: "${{ matrix.os.name }} (${{ matrix.runtime.label }})"
     runs-on: ${{ matrix.os.target }}
+    needs:
+    - version
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - name: use node ${{ matrix.runtime.node_version }}
+      uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node }}
+        node-version: ${{ matrix.runtime.node_version }}
         registry-url: 'https://registry.npmjs.org'
         cache: 'yarn'
     - name: install
-      run: |
-        yarn install --ignore-scripts --frozen-lockfile --non-interactive
-    - name: build
-      run: yarn run build-${{ matrix.os.name }}
+      run: yarn install --ignore-scripts --frozen-lockfile --non-interactive
+    - name: build ${{ matrix.runtime.runtime }} binaries
+      run: yarn run package-${{ matrix.runtime.runtime }}-${{ matrix.os.name }}
 
   test:
     runs-on: ubuntu-latest
